# claude-code-tool-dev

./: .git-blame-ignore-revs  .gitignore  .mcp.json  2026-02-04-docshandoffs2026-02-0321-30improving-skills-s-tools.md  2026-02-04-docshandoffs2026-02-0321-30improving-skills-s.md  2026-02-04-docshandoffs2026-02-0321-30improving-skills-s.part-00-preamble.md  2026-02-04-docshandoffs2026-02-0321-30improving-skills-s.part-02-turns-11-20.md  2026-02-04-docshandoffs2026-02-0321-30improving-skills-s.txt  2026-02-04-read-this-and-share-your-interpretation-tools.md  2026-02-04-read-this-and-share-your-interpretation.md  2026-02-04-read-this-and-share-your-interpretation.txt  AGENTS.md  CLAUDE.md  README.md  cover-letter-guide.md  migration-inventory.yaml  package-lock.json  package.json  pyproject.toml  quick-audit.md  simulation-based-assessment-framework-discussion-part-00-preamble.md  simulation-based-assessment-framework-discussion-part-03-turns-21-29.md  simulation-based-assessment-framework-discussion-part-04-turns-30-38.md
.claude/: CLAUDE.md  gsd-file-manifest.json  reviewing-skills-audit-entry-gate.md  settings.json
.claude-plugin/: marketplace.json
archive/: 2026-01-15-extension-docs-auto-sync-gap.md
docs/: README.md  The-Complete-Guide-to-Building-Skill-for-Claude.md  claude-code-extension-system.md  codex-app-server.md  codex-mcp.md  codex-non-interactive-mode.md  cover-letter-guide.md  llm-reference-skill-evaluation.md  simulation-assessment-context-official.md  simulation-assessment-context.md  skills-guide.md
scripts/: benchmark_v0_resume  inventory  migrate  (+11 more)
(+1653 files in other folders)
