[project]
name = "claude-code-tool-dev"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/plugins/cross-model/context-injection",
    "packages/plugins/context-metrics",
    "packages/plugins/cross-model",
    "packages/plugins/handoff",
    "packages/plugins/ticket",
]
